# repository-julia-gr1

homeworks 2/HW01/: HW01.ipynb
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb  agg_by_country.csv
homeworks/HW03/eda-cli/: README.md  core.py  pyproject.toml
homeworks/HW03/eda-cli/data/: example.csv
homeworks/HW03/eda-cli/reports_example/: report.md  summary.csv
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/reports/: report.md
homeworks/HW04/eda-cli/reports_example/: missing.csv
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py  core.py  viz.py
homeworks/HW04/eda-cli/src/s03.egg-info/: PKG-INFO  requires.txt
homeworks/HW05/: HW05-logreg-solution.ipynb
homeworks/HW06/: HW06.ipynb  S06-hw-dataset.csv
homeworks/HW07/: HW07.ipynb  S07-hw-dataset-01.csv
